Add font-family to / page

--- a/server/templates/actions.html
+++ b/server/templates/actions.html
@@ -5,14 +5,14 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>Home Page</title>
-      <link rel="stylesheet"href="{{ url_for('static', filename='css/style.css') }}">
+      <link rel="stylesheet"href="{{ url_for('static', filename='css/actions_style.css') }}">
 </head>
-l<body>
+<body>
 
       <div class="nav-wrapper">
             <nav>
-                  <a href="#" class="hover-this"><span>Define Cure Package</span></a>
-                  <a href="http://127.0.0.1:5000/{{current_user}}//Choose_disease" class="hover-this"><span style="color:yellow; font-family: Georgia, serif;">Request Cure Package</span></a>
+                  <a href="#" class="hover-this"><span style="font-family: Verdana, sans-serif;">Define Cure Package</span></a>
+                  <a href="http://127.0.0.1:5000/{{current_user}}//Choose_disease" class="hover-this"><span style="color:yellow; font-family: Verdana, sans-serif;">Request Cure Package</span></a>
                   <div class="cursor"></div>
             </nav>
       </div>
