--- a/server/templates/actions.html
+++ b/server/templates/actions.html
@@ -12,7 +12,7 @@
       <div class="nav-wrapper">
             <nav>
                   <a href="#" class="hover-this"><span style="font-family: Verdana, sans-serif;">Define Cure Package</span></a>
-                  <a href="http://127.0.0.1:5000/{{current_user}}//Choose_disease" class="hover-this"><span style="color:yellow; font-family: Verdana, sans-serif;">Request Cure Package</span></a>
+                  <a href="http://127.0.0.1:5000/{{current_user}}/Choose_disease" class="hover-this"><span style="color:yellow; font-family: Verdana, sans-serif;">Request Cure Package</span></a>
                   <div class="cursor"></div>
             </nav>
       </div>
