--- a/server/templates/diseases.html
+++ b/server/templates/diseases.html
@@ -19,7 +19,7 @@
                 <div>
                     <ul>
                         {% for disease in category[1] %}
-                            <li> <a href="http://127.0.0.1:5000/{{current_user}}/{{disease}}/request_cure_package"> {{disease}} </a> </li>
+                            <li> <a class="subs" href="http://127.0.0.1:5000/{{current_user}}/{{disease}}/request_cure_package"> {{disease}} </a> </li>
                         {% endfor %}
                     </ul>
                 </div>
