Add /choose_package and redesign login page

--- a/server/templates/actions.html
+++ b/server/templates/actions.html
@@ -4,12 +4,11 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Home Page</title>
+      <title>Home</title>
       <link rel="stylesheet"href="{{ url_for('static', filename='css/actions_style.css') }}">
 </head>
 
 <body>
-
       <div class="nav-wrapper">
             <nav>
                   <a href="#" class="hover-this"><span style="font-family: Verdana, sans-serif;">Define Cure Package</span></a>
@@ -19,11 +18,10 @@
       </div>
 
       <script>
-alert('🔴 Hey {{current_user}}, you logged in as a user.\n Welcome to the website!')
-            </script>
-
+            alert('🔊 Hey {{current_user}}, you logged in as a user.\n Welcome to the website!')
+      </script>
+      
 <script>
-
 (function () {
 
       const link = document.querySelectorAll('nav > .hover-this');
