--- a/server/templates/diseases.html
+++ b/server/templates/diseases.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,6 @@
 </head>
 
 <body>
-
     <div class="box">
         <ul>
             {% for category in diseases %}
@@ -17,13 +17,13 @@
                 <div>
                     <ul>
                         {% for disease in category[1] %}
-                            <li> <a class="subs" href="http://127.0.0.1:5000/{{current_user}}/{{disease}}/request_cure_package"> {{disease}} </a> </li>
+                            <li> <a class="subs" href="http://127.0.0.1:5000/{{current_user}}/{{disease}}/choose_package"> {{disease}} </a> </li>
                         {% endfor %}
                     </ul>
                 </div>
             {% endfor %}
         </ul>
     </div>
-
 </body>
+
 </html>
