--- a/server/templates/actions.html
+++ b/server/templates/actions.html
@@ -21,7 +21,7 @@
       <script>
             var role = '';
             if ('{{ role|lower }}' == 'true') {
-                  role = 'admin';
+                  role = 'verifier';
             } else {
                   role = 'user';
             }
