--- a/server/templates/packages.html
+++ b/server/templates/packages.html
@@ -10,6 +10,7 @@
 
 <h2 class="heroText">List of Packages:</h2>
 <body>
+
     <div class="backHero">
         {% for p in packages %}
             <div class="listItem">
@@ -19,13 +20,21 @@
                         <li class="listDesc">{{p[i+1]}}</li>
                     {% endfor %}
                 </ul>
-                <form action="/submit" method="POST`">
-                    <input type="hidden" name="data" placeholder="EnterData">
+                <form action="/{{current_user}}/{{selected_disease}}/fill_out_form" method="POST`">
+                    <input type="hidden" name="package" value="{{p[0]}}" placeholder="EnterData">
                     <button class="chooseButton" type="submit">Choose</button>
                 </form>
             </div>
         {% endfor %}
+
+        {% if is_empty %}
+            <h1 style="color:red;">
+                Unfortunately, there is no specialist with free time for the disease you selected. <br />
+                back to <a href=" http://127.0.0.1:5000/{{current_user}}/choose_disease">choose disease</a> page.
+            </h1>
+        {% endif %}
     </div>
+
 </body>
 
 </html>
