--- a/server/templates/actions.html
+++ b/server/templates/actions.html
@@ -26,7 +26,7 @@
                   } else {
                         role = 'user';
                   }
-                  alert('📢 Hey {{current_user}}, you logged in as a '+ role + '.\n Welcome to the website!')
+                  alert('📢 Hey {{current_user}}, you logged in as a user.\n Welcome to the website!')
             </script>
       {% endif %}
 
