--- a/Server/templates/verify.html
+++ b/Server/templates/verify.html
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                     <div class="verifyBigContainer">
-                        <form action="submit" method="POST">
+                        <form action="/submit" method="POST">
                             <input type="hidden" name="" id="">
                             <input class="verifyButton" type="submit" value="Verify">
                         </form>
