--- a/Server/templates/form.html
+++ b/Server/templates/form.html
@@ -10,7 +10,7 @@
 
 <body class="bodyPRQ">
     <div class="formHero">
-        <form action="/{{current_user}}/{{selected_disease}}/fill_out_form?package=8" method="POST" enctype="multipart/form-data">
+        <form action="{{ url_for('fill_out_form', user=current_user, disease=selected_disease, package_id=package_id) }}" enctype="multipart/form-data" method="POST">
             <p>Fullname:</p>
             <input placeholder="firstname" class="normalInput" type="text" name="firstname">
             <input placeholder="lastname" class="normalInput" type="text" name="lastname">
