--- a/Server/templates/packages.html
+++ b/Server/templates/packages.html
@@ -16,9 +16,13 @@
             <div class="listItem">
                 <img class="doctorHero" src="{{ url_for('static', filename='images/doctor.png') }}" alt="doctors"><br />
                 <ul>
-                    {% for i in range(7) %}
-                        <li class="listDesc">{{p[i+1]}}</li>
-                    {% endfor %}
+                    <li class="listDesc">Disease: {{p[1]}}</li>
+                    <li class="listDesc">Iran Province: {{p[6]}}</li>
+                    <li class="listDesc">Hospital: {{p[4]}}</li>
+                    <li class="listDesc">Start Date: {{p[2]}}</li>
+                    <li class="listDesc">Finish Date: {{p[3]}}</li>
+                    <li class="listDesc">Doctor: {{p[5]}}</li>
+                    <li class="listDesc">Price: {{p[7]}}</li>
                 </ul>
 
                 <form id="myForm" action="{{ url_for('choose_package', user=current_user, disease=selected_disease) }}" method="POST">
