--- a/Server/templates/login.html
+++ b/Server/templates/login.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="loginbar">
-        <form action = "/" method = "POST">
+        <form action="{{ url_for('login') }}" method="POST">
             <input type="hidden" name="form" value="login"><br>
             <p class="params">Username:</p>
             <input class="lbox" type="text" name="Username" placeholder="Enter Username" required>
