--- a/Server/templates/verify.html
+++ b/Server/templates/verify.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="5">
     <title>Verify Packages</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/verify_style.css') }}">
 
