A security measure (login or signup before accessing any page) has been added.

--- a/Server/templates/login.Jinja2
+++ b/Server/templates/login.Jinja2
@@ -11,11 +11,11 @@
 
 {% if stat == -1 %}
     <script>
-        alert('⛔ Unfortunately, you are not a member of our website!')
+        alert('⛔ We're sorry, but you do not have membership access to our website.')
     </script>
 {% elif stat == -2 %}
     <script>
-        alert('⚠️ Your password is incorrect, please try again.')
+        alert('⚠️ The password you entered is incorrect. Please try again.')
     </script>
 {% endif %}
 
