--- a/Server/templates/actions.Jinja2
+++ b/Server/templates/actions.Jinja2
@@ -12,16 +12,16 @@
 <body>
       <div class="nav-wrapper">
             <nav>
-                  <a href="#" class="hover-this"><span style="font-family: Verdana, sans-serif;">Define Cure Package</span></a>
-                  <a href="{{ url_for('choose_disease', user=current_user) }}" class="hover-this"><span style="color:yellow; font-family: Verdana, sans-serif;">Request Cure Package</span></a>
-                  <a href="{{ url_for('notifications', user=current_user) }}" class="hover-this"><span style="color:yellow; font-family: Verdana, sans-serif;">Notifications</span></a>
+                  <a href="{{ url_for('choose_disease', user=current_user) }}" class="hover-this"><span style="color:white; font-family: Verdana, sans-serif;">Request Cure Package</span></a>
+                  <a href="{{ url_for('notifications', user=current_user) }}" class="hover-this"><span style="color:red; font-family: Verdana, sans-serif;">Notifications</span></a>
+                  <a href="{{ url_for('logout', user=current_user) }}" class="hover-this"><span style="color:yellow; font-family: Verdana, sans-serif;">Log out</span></a>
                   <div class="cursor"></div>
             </nav>
       </div>
 
       {% if is_message == 1 %}
             <script>
-                  alert('📢 Hey {{current_user}},\nYour documents have been sent to be verify by the verifier.')
+                  alert('📢 Hey {{current_user}},\nYour documents have been sent for verification by the verifier.')
             </script>
       {% endif %}
 
