Add more instances to cure_packages.db database

--- a/Server/templates/login.Jinja2
+++ b/Server/templates/login.Jinja2
@@ -11,7 +11,7 @@
 
 {% if stat == -1 %}
     <script>
-        alert('⛔ We're sorry, but you do not have membership access to our website.')
+        alert('⛔ Sorry, but you do not have membership access to our website.')
     </script>
 {% elif stat == -2 %}
     <script>
