--- a/Server/templates/diseases.Jinja2
+++ b/Server/templates/diseases.Jinja2
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Choose disease</title>
+  <title>Choose Disease</title>
   <link rel="stylesheet"href="{{ url_for('static', filename='css/diseases_style.css') }}">
 </head>
 
