Add favicon.ico to all pages

--- a/Server/templates/form.Jinja2
+++ b/Server/templates/form.Jinja2
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prerequisites Form</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/form_style.css') }}">
+    <title>Prerequisites Form</title>
 </head>
 
 <body class="bodyPRQ">
