--- a/Server/templates/notifications.Jinja2
+++ b/Server/templates/notifications.Jinja2
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="15">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/notifications_style.css') }}">
     <title>Notifications</title>
-    <link rel="stylesheet"href="{{ url_for('static', filename='css/notifications_style.css') }}">
 </head>
 
 <body>
