--- a/Server/templates/packages.Jinja2
+++ b/Server/templates/packages.Jinja2
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Choose Package | Packages</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/packages_style.css') }}">
+    <title>Choose Package | Packages</title>
 </head>
 
 <h2 class="heroText">List of Packages:</h2>
