--- a/Server/templates/login.Jinja2
+++ b/Server/templates/login.Jinja2
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login_style.css') }}">
+    <title>Login</title>
 </head>
 
 {% if is_message == 1 %}
