--- a/Server/templates/verify.Jinja2
+++ b/Server/templates/verify.Jinja2
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="5">
-    <title>Verify Packages</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/verify_style.css') }}">
-
+    <title>Verify Packages</title>
 </head>
 
 <body>
